# Projet7

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_dashboard.py
.github/workflows/: azure-webapps-python.yml
notebooks/: 01-modelisation.ipynb  01-read.ipynb  app.py  model.py
notebooks/src/: lightgbm_with_simple_features.py  model_prep.py
results/: data_drift_report_by_col.html  data_drift_report_overview.html
src/: app_utils.py  lightgbm_with_simple_features.py  model.py  model_prep.py
tests/: tests.py
