[tool.poetry]
name = "projet7"
version = "0.1.0"
description = ""
authors = ["BlancaAlfaro <blanca.alfaro.merino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
mlflow = "^2.10.2"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
lightgbm = "^4.3.0"
missingno = "^0.5.2"
imblearn = "^0.0"
xgboost = "^2.0.3"
boto3 = "^1.34.78"
shap = "^0.45.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
streamlit = "^1.33.0"
botocore = "^1.34.92"
identity = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
